[gd_scene load_steps=33 format=3 uid="uid://tnu2t5fxngqu"]

[ext_resource type="TileSet" uid="uid://cskc25vgsk8of" path="res://tileset/scene_1.tres" id="1_8thve"]
[ext_resource type="Script" path="res://scripts/scenes/scene_3.gd" id="1_u4nm7"]
[ext_resource type="PackedScene" uid="uid://sbmrem55ogmf" path="res://scenes/det/cosmosik_bg.tscn" id="2_filmp"]
[ext_resource type="PackedScene" uid="uid://bspy6yehyjxjq" path="res://dialogues/character_scene/Sigrid.tscn" id="2_w4kxg"]
[ext_resource type="PackedScene" uid="uid://d3tqbuq8o1bbl" path="res://dialogues/character_scene/Kori.tscn" id="3_dhouj"]
[ext_resource type="PackedScene" uid="uid://d2dveldbar2k6" path="res://player/player.tscn" id="3_sreps"]
[ext_resource type="Texture2D" uid="uid://cjdxe72jb3c4f" path="res://art/portal/portal.png" id="5_c5cfw"]
[ext_resource type="Script" path="res://scenes/card/card_15.gd" id="6_j0my5"]
[ext_resource type="Texture2D" uid="uid://ch2dn5d73vt0g" path="res://art/portal/portal_2.png" id="6_xfmfr"]
[ext_resource type="Texture2D" uid="uid://c2qvh5m286kyl" path="res://art/inventory/card.png" id="7_f4twr"]
[ext_resource type="PackedScene" uid="uid://c5ciil2026wet" path="res://scenes/pause_menu/pause_menu.tscn" id="7_uyeau"]

[sub_resource type="CircleShape2D" id="CircleShape2D_awq16"]
radius = 23.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xr22l"]
size = Vector2(19, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_54owc"]
atlas = ExtResource("5_c5cfw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gew7f"]
atlas = ExtResource("5_c5cfw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jwdq"]
atlas = ExtResource("5_c5cfw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcywv"]
atlas = ExtResource("5_c5cfw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwn0n"]
atlas = ExtResource("5_c5cfw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h2wa"]
atlas = ExtResource("5_c5cfw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckvmw"]
atlas = ExtResource("6_xfmfr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amvsf"]
atlas = ExtResource("6_xfmfr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsxdi"]
atlas = ExtResource("6_xfmfr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f018b"]
atlas = ExtResource("6_xfmfr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1vh4"]
atlas = ExtResource("6_xfmfr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5umdy"]
atlas = ExtResource("6_xfmfr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e27ts"]
atlas = ExtResource("5_c5cfw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiawf"]
atlas = ExtResource("5_c5cfw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psvis"]
atlas = ExtResource("5_c5cfw")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfsw8"]
atlas = ExtResource("5_c5cfw")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfh8q"]
atlas = ExtResource("5_c5cfw")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ttg7"]
atlas = ExtResource("5_c5cfw")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4beyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54owc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gew7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jwdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcywv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwn0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h2wa")
}],
"loop": true,
"name": &"anf_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckvmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amvsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsxdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f018b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1vh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5umdy")
}],
"loop": true,
"name": &"anf_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e27ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiawf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psvis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfsw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfh8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ttg7")
}],
"loop": true,
"name": &"prof",
"speed": 5.0
}]

[node name="scene_3" type="Node2D"]
script = ExtResource("1_u4nm7")

[node name="Sigrid" parent="." instance=ExtResource("2_w4kxg")]

[node name="Kori" parent="." instance=ExtResource("3_dhouj")]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-402, 64)
tile_set = ExtResource("1_8thve")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 2, 3, -1, 2, 3, 65535, 2, 3, 0, 2, 3, 1, 2, 3, 2, 2, 3, -131070, 2, 3, -65534, 2, 3, 65538, 2, 3, 131074, 2, 3, 196610, 2, 3, -2, 2, 3, -3, 2, 3, -4, 2, 3, -5, 2, 3, -131073, 2, 3, -196606, 2, 3, 65531, 2, 3, 131067, 2, 3, 196603, 2, 3, 262139, 2, 3, 262140, 2, 3, 262141, 2, 3, 262142, 2, 3, 262143, 2, 3, 196608, 2, 3, 196609, 2, 3, -196605, 2, 1, -131069, 2, 1, -65533, 2, 1, 3, 2, 1, 65539, 2, 1, 131075, 2, 1, 196611, 2, 1, 65532, 0, 0, 131068, 2, 1, 196604, 0, 1, -196608, 2, 1, -131072, 2, 1, -65536, 0, 1, 262147, 2, 2, -262141, 2, 0, -262144, 2, 0, -6, 1, 1, 65530, 1, 1, 131066, 1, 1, 196602, 1, 1, 262138, 1, 1, -131074, 1, 1, -65538, 0, 3, -196607, 1, 1, -131071, 1, 1, -65535, 0, 3, 65537, 0, 2, 131073, 0, 3, 65534, 0, 2, 131071, 1, 4, 65536, 1, 4, 65533, 1, 4, 327675, 1, 4, 327676, 1, 4, 327677, 1, 4, 327678, 1, 4, 327679, 1, 4, 262144, 1, 4, 262145, 1, 4, 262146, 1, 4, -65539, 1, 3, -65540, 1, 3, -65541, 1, 3, -65542, 1, 0, -196610, 1, 0, -262143, 1, 0, 327674, 1, 2, 131070, 1, 2, -196609, 1, 3, -262142, 1, 3, 196605, 1, 3, 196606, 1, 3, 196607, 1, 3, 131072, 1, 3)

[node name="ParallaxBackground" parent="." instance=ExtResource("2_filmp")]
scroll_offset = Vector2(2179.63, 204.85)

[node name="card_4" type="StaticBody2D" parent="."]
visible = false
position = Vector2(-41, 404)
script = ExtResource("6_j0my5")

[node name="Sprite2D" type="Sprite2D" parent="card_4"]
position = Vector2(-353, -228)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_f4twr")

[node name="chatDetection" type="Area2D" parent="card_4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="card_4/chatDetection"]
position = Vector2(-352, -228)
shape = SubResource("CircleShape2D_awq16")

[node name="player" parent="." instance=ExtResource("3_sreps")]
position = Vector2(-328, 69)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2, 2)
limit_left = -675
limit_top = -150
limit_right = -150
limit_bottom = 325
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="3_2(1)" type="Area2D" parent="."]
position = Vector2(-417, -43)
scale = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="3_2(1)"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_xr22l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="3_2(1)"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4beyr")
animation = &"prof"
autoplay = "prof"

[node name="3_2(2)" type="Area2D" parent="."]
position = Vector2(-322, -42)
scale = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="3_2(2)"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_xr22l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="3_2(2)"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4beyr")
animation = &"prof"
autoplay = "prof"

[node name="PauseMenu" parent="." instance=ExtResource("7_uyeau")]

[connection signal="body_entered" from="card_4/chatDetection" to="card_4" method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="card_4/chatDetection" to="card_4" method="_on_chat_detection_body_exited"]
[connection signal="body_entered" from="3_2(1)" to="." method="_on__21_body_entered"]
[connection signal="body_entered" from="3_2(2)" to="." method="_on__22_body_entered"]
